Fix css on small, reduce animation dutation

--- a/app/assets/stylesheets/components/videos.scss
+++ b/app/assets/stylesheets/components/videos.scss
@@ -71,7 +71,7 @@
     }
   }
 
-  $duration: 450ms;
+  $duration: 350ms;
   $tileWidth: 311px;
   $tileHeight: ($tileWidth / (16/9));
   $iconSize: 50px;
@@ -112,51 +112,6 @@
     object-fit: cover;
   }
 
-  .tile__details {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
-    color: white;
-    font-size: 10px;
-    opacity: 0;
-    transition: $duration opacity;
-
-    &:after,
-    &:before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      display: black;
-    }
-
-    &:after {
-      margin-top: (-($iconSize / 2));
-      margin-left: (-($iconSize / 2));
-      width: $iconSize;
-      height: $iconSize;
-      border: 3px solid #ecf0f1;
-      line-height: $iconSize;
-      text-align: center;
-      border-radius: 100%;
-      background: rgba(0,0,0,0.5);
-      z-index: 1;
-    }
-
-    &:before {
-      content: '▶';
-      left: 0;
-      width: 100%;
-      font-size: 30px;
-      margin-left: 7px;
-      margin-top: -7px;
-      text-align: center;
-      z-index: 2;
-    }
-  }
-
   .tile:hover .tile__details {
     opacity: 1;
   }
@@ -173,33 +128,85 @@
 
   // We assume when you hover .row, you're also hovering a .tile
   // First, move the whole row towards the left
-  .row__inner:hover {
-    transform: translate3d($moveLeft, 0, 0);
-  }
+  @media #{$large-up} {
+    .row__inner:hover {
+      transform: translate3d($moveLeft, 0, 0);
+    }
 
-  .row__inner:hover .tile {
+    .row__inner:hover .tile {
+      // Fade out every tile
+      opacity: .3;
 
-    // Fade out every tile
-    opacity: .3;
+      // And then grow the current tile and make it opaque again
+      &:hover {
+        transform: scale($growFactor);
+        opacity: 1;
 
-    // And then grow the current tile and make it opaque again
-    &:hover {
-      transform: scale($growFactor);
-      opacity: 1;
+        /* &:first-of-type { */
+          /* transform: scale($growFactor) translate3d(-$moveLeft / $growFactor, 0, 0); */
 
-      /* &:first-of-type { */
-        /* transform: scale($growFactor) translate3d(-$moveLeft / $growFactor, 0, 0); */
-
-        /* ~ .tile { */
-          /* transform: translate3d($moveRight * 1.5, 0, 0) */
+          /* ~ .tile { */
+            /* transform: translate3d($moveRight * 1.5, 0, 0) */
+          /* } */
         /* } */
-      /* } */
+      }
+    }
+
+    // And finally move all tiles right of the current tile to the right,
+    // so its flush against the hovered tile
+    .tile:hover ~ .tile {
+      transform: translate3d($moveRight, 0, 0)
+    }
+
+    .tile__details {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+      color: white;
+      font-size: 10px;
+      opacity: 0;
+      transition: $duration opacity;
+
+      &:after,
+      &:before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: black;
+      }
+
+      &:after {
+        margin-top: (-($iconSize / 2));
+        margin-left: (-($iconSize / 2));
+        width: $iconSize;
+        height: $iconSize;
+        border: 3px solid #ecf0f1;
+        line-height: $iconSize;
+        text-align: center;
+        border-radius: 100%;
+        background: rgba(0,0,0,0.5);
+        z-index: 1;
+      }
+
+      &:before {
+        content: '▶';
+        left: 0;
+        width: 100%;
+        font-size: 30px;
+        margin-left: 7px;
+        margin-top: -7px;
+        text-align: center;
+        z-index: 2;
+      }
     }
   }
 
-  // And finally move all tiles right of the current tile to the right,
-  // so its flush against the hovered tile
-  .tile:hover ~ .tile {
-    transform: translate3d($moveRight, 0, 0)
+  @media #{$small-only} {
+    .tile {
+      margin-right: 0;
+    }
   }
 }
